postgres用の設定値も追加

--- a/src/main/resources/application-format.properties
+++ b/src/main/resources/application-format.properties
@@ -8,3 +8,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.session.timeout=10m
 logging.level.org.springframework.security=DEBUG
+
+# postgres用
+# spring.application.name=money
+# spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
+# spring.datasource.username=yourusername
+# spring.datasource.password=yourpassword
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# server.servlet.session.timeout=10m
